# talent-matcher

./: .gitignore  README.md  config.example.yaml  config.py  jd.txt  main.py  pipeline.py  pyproject.toml  requirements.txt
agents/: cover_letter.py  cover_letter_docx.py  gap_analyzer.py  interview_prep.py  jd_parser.py  resume_docx.py  resume_tailor.py  salary_researcher.py  scorer.py  story_matcher.py
data/: experience_bank.example.yaml  resume.example.md
models/: schemas.py  utils.py
templates/: cover_letter.jinja
