[project]
name = "talent-matcher"
version = "0.1.0"
description = "Multi-agent pipeline that matches STAR stories to job descriptions and generates tailored resumes, cover letters, and gap analysis using Claude."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
    "pydantic>=2.0.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "sentence-transformers>=3.0.0",
]

[tool.setuptools]
packages = ["agents", "models"]
py-modules = ["main", "pipeline"]
